[package]
name = "viperus"
version = "0.1.0"
authors = ["mauro cordioli <coma@cordioli.it>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maurocordioli/viperus"
desciption="Viperus Viper is an  (in)complete configuration solution for rust applications heavly inspred by the GO package Viper.It supports defaults reading from JSON, TOML, YAML, envfile, environment variables reading from Clap command line flags setting explicit values"
exclude = [
    "tarpaulin-report.html",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
serde="1.0.0"
serde_yaml="0.8.11" 
serde_json="1.0.44"
toml="0.5.5"
dirs="2.0.0"
clap="2.33.0"
dotenv="0.15.0"
lazy_static="1.4.0"

[dev-dependencies]
env_logger = "*"


[features]
# no features by default
default = [ "global"]

# static global config
global = []